# Car_model_learn

./: .gitignore  pyproject.toml
AutomationCar_Orge/: .gitignore  README.md  pyproject.toml
AutomationCar_Orge/app/: container.py  handler.py  main.py
AutomationCar_Orge/app/config/: config.yaml  settings.py
AutomationCar_Orge/app/entrypoints/: sonar.py  terminal.py  terminal_main.py  websocket.py
AutomationCar_Orge/app/entrypoints/ml/: autodrive.py  config.py
AutomationCar_Orge/infrastructure/gateway/camera/: lgp_camera_gateway.py
AutomationCar_Orge/infrastructure/gateway/dc/: lgpio_dc_gateway.py
AutomationCar_Orge/infrastructure/gateway/sonar/: lgp_sonar_gateway.py
AutomationCar_Orge/infrastructure/repository/: local_data_repository.py
AutomationCar_Orge/internal/domain/entity/: control_policy.py  drive_control.py  vehicle_motion.py
AutomationCar_Orge/internal/domain/value_object/: control_input.py  control_rules.py  drive_state.py  safety_rules.py  sonar_frame.py  steer.py
AutomationCar_Orge/internal/service/: drive_service.py
AutomationCar_Orge/learning_data/: log.csv  log.jsonl  log.jsonl.bak  log.jsonl.pre_fix
AutomationCar_Orge/presentation/: camera_view.py  terminal_ui.py
AutomationCar_Orge/tests/domain/: test_domain_objects.py
code/data_assemble/: README.md  main.py
code/data_assemble/app/: main.py  (+1 more)
ios/blueberry-pi/: ContentView.swift  blueberry_piApp.swift
ios/blueberry-pi.xcodeproj/: project.pbxproj
learning_data/: log.jsonl
machine_learning/: README.md  __init__.py  config.py  dataset.py  model.py  predict.py  train.py
(+70 files in other folders)
