[project]
name = "learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface_hub>=0.27.1",
    "numpy>=2.4.1",
    "pillow>=12.1.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transforms>=0.2.1",
    "matplotlib>=3.10.0",
    "tqdm>=4.67.0",
]
