[project]
name = "automationcar-orge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "keyboard>=0.13.5",
    "lgpio>=0.2.2.0",
    "opencv-python>=4.13.0.90",
    "picamera2>=0.3.33",
    "pyyaml>=6.0.3",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
]
